--- a/coopplanning/views/task.xml
+++ b/coopplanning/views/task.xml
@@ -26,7 +26,10 @@
                     </div>
                     <group>
                         <group>
-                            <field name="task_template_id"  />
+                            <div attrs="{'invisible': [('task_template_id', '=', False)]}">
+                                <field name="task_template_id"  />
+                            </div>
+                            
                             <field name="task_type_id" />
                             <field name="worker_id" />
                         </group>
