--- a/coopplanning/views/task_template.xml
+++ b/coopplanning/views/task_template.xml
@@ -1,4 +1,20 @@
 <odoo>
+    <record model="ir.ui.view" id="task_template_view_search">
+        <field name="name">Task Template List</field>
+        <field name="model">coopplanning.task.template</field>
+        <field name="arch" type="xml">
+            <search string="Search task templates">
+                <field name="worker_nb"/> 
+                <field name="start_time"/>
+                <field name="task_type_id"/>
+                <!--<field name="area" />-->
+                <field name="day_nb_id"/>
+                <field name="worker_ids"/>
+                <filter string="Archived templates" name="state_active" domain="[('active','=',0)]"/>
+            </search>
+        </field>
+    </record>
+    
     <record model="ir.ui.view" id="task_template_view_tree">
         <field name="name">Task Template List</field>
         <field name="model">coopplanning.task.template</field>
@@ -31,8 +47,8 @@
                     </div>
                     <group>
                         <group>
-                            <field name="task_type_id"   />
-                            <field name="day_nb_id" />
+                            <field name="task_type_id" options="{'no_create_edit': True}" />
+                            <field name="day_nb_id" options="{'no_create_edit': True}" />
                             <field name="worker_nb" />
                             <field name="active" />
                         </group>
@@ -43,8 +59,15 @@
                             <field name="floating" />
                         </group>
                     </group>
-                        <separator string="Pre defined Worker" />
-                        <field name="worker_ids" nolabel="1" />
+                        <div attrs="{'invisible': [('floating', '=', True)]}">
+                            <separator string="Pre defined Worker" />
+                            <field name="worker_ids" nolabel="1" >
+                                <tree>
+                                    <field name="name" />
+                                    <field name="" />
+                                </tree>
+                            </field>
+                        </div>
                 </sheet>
             </form>
         </field>
