added instructor extension and domain selection. Not working

--- a/openacademy/views/partners.xml
+++ b/openacademy/views/partners.xml
@@ -46,6 +46,7 @@
                         <field name="phone" widget="phone"/>
                         <field name="mobile" widget="phone"/>
                     </group>
+                    <!-- <field name="session_ids" /> -->
                 </form>
             </field>
         </record>
